@@ -67,22 +67,8 @@ the working directory state to be like it as after a CVS checkout:
 NTSC Setup/Pedestal
 ===================
 
-The decoder's add_ntsc_setup option should only be used 
-by North American NTSC users when viewing the video on your computer
-monitor. It should never be used when transcoding, image processing,
-or rendering.
-
-The encoder's rem_ntsc_setup (rem=remove) should be used
-only in the rare case that an image has had 7.5 IRE setup artificially
-added. During post-production, accounting for setup should be avoided.
-It is the responsibility of the analog output of your DV equipment to
-add setup where appropriate. If your DV equipment lacks this option,
-then use a processing amplifier.
-
-These options--both for decoding
-and encoding--are always ignored for PAL video.
-
-For more information see Adam Wilt's DV FAQ:
+This option has been disabled in libdv due to improper usage.
+If you are still curious about this topic, see Adam Wilt's DV FAQ:
 http://www.adamwilt.com/DV-FAQ-tech.html#Setup
 
 
